--- a/public/index.html
+++ b/public/index.html
@@ -1,63 +1,97 @@
 <!doctype html>
 <html lang="en" data-bs-theme="dark">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./style.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/fe83ab4eda.js"></script>
-    <title>Points</title>
-</head>
-<body>
-    <div class="container">
-        <div id="landing-page">
-            <div class="d-flex justify-content-center mt-3">
-                <h1>Points</h1>
-            </div>
-            <div class="d-grid gap-2 col-12 mx-auto constrain">
-                <label for="room-code" class="fw-bold mt-4">ROOM CODE</label>
-                <input type="text" id="room-code" maxlength="4" class="form-control" placeholder="ENTER 4-LETTER CODE">
-                <div id="room-not-found" class="d-none alert alert-danger" role="alert">
-                    Room not found
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./style.css" />
+        <script src="https://kit.fontawesome.com/fe83ab4eda.js"></script>
+        <title>Points</title>
+    </head>
+    <body>
+        <div class="container">
+
+            <!-- Landing Page -->
+            <div id="landing-page">
+                <div class="d-flex justify-content-center mt-3">
+                    <h1>Points</h1>
                 </div>
-                <button id="join-room" class="btn btn-primary btn-lg mt-4">Join Room</button>
-                <button id="create-room" class="btn btn-outline-secondary">Create Room</button>
+                <div class="d-grid gap-2 col-12 mx-auto constrain">
+                    <label for="room-code" class="fw-bold mt-4">ROOM CODE</label>
+                    <input type="text" id="room-code" maxlength="4" class="form-control" placeholder="ENTER 4-LETTER CODE">
+                    <div id="room-not-found" class="d-none alert alert-danger" role="alert">
+                        Room not found
+                    </div>
+                    <button id="join-room" class="btn btn-primary btn-lg mt-4">Join Room</button>
+                    <button id="create-room" class="btn btn-outline-secondary">Create Room</button>
+                </div>
             </div>
+
+            <!-- Game Room -->
+            <div id="game-room" class="d-none">
+
+                <div class="d-flex justify-content-center mt-3">
+                    <h1 id="title">Room </h1>
+                    <button id="copy-link" class="ms-2 mb-4 btn btn-outline-light btn-sm">
+                        <i class="fa-solid fa-copy"></i>
+                    </button>
+                </div>
+
+                <!-- Stats -->
+                <!-- <h2 class="d-flex justify-content-center"> Results<h2> -->
+                <div id="stats" class="w-50 mb-5 bar-chart mx-auto"></div>
+
+                <!-- Players -->
+                <div id="players" class="row"></div>
+
+                <!-- Cards -->
+                <div class="row w-50 mx-auto mt-5 text-center">
+                    <div class="col d-flex justify-content-center">
+                        <p class="point-card border border-primary border-3 rounded p-3">1</p>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <p class="point-card border border-primary border-3 rounded p-3">2</p>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <p class="point-card border border-primary border-3 rounded p-3">3</p>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <p class="point-card border border-primary border-3 rounded p-3">5</p>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <p class="point-card border border-primary border-3 rounded p-3">8</p>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <p class="point-card border border-primary border-3 rounded p-3">?</p>
+                    </div>
+                    <div>
+                        Select Your Card!
+                    </div>
+                </div>
+
+                <div class="d-grid gap-2 col-6 mx-auto constrain">
+                    <button id="reveal" class="btn btn-primary btn-lg my-4">Reveal</button>
+                    <button id="reset" class="d-none btn btn-outline-primary btn-lg my-4">Reset</button>
+                </div>
+            </div>
+
+            <!-- Change Name Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">Change Name</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <input id="name-input" type="text" id="room-code" maxlength="16" class="form-control" placeholder="Name">
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button id="change-name" type="button" class="btn btn-primary" data-bs-dismiss="modal">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </div> 
         </div>
-        <div id="game-room" class="d-none">
-            <div class="d-flex justify-content-center mt-3">
-                <h1 id="title">Room </h1>
-                <i class="fa-solid fa-copy"></i>
-            </div>
-            <div class="d-grid gap-2 col-6 mx-auto constrain">
-                <button id="reveal" class="btn btn-primary btn-lg my-4">Reveal</button>
-                <button class="d-none btn btn-outline-primary btn-lg my-4">Reset</button>
-            </div>
-            <div id="players" class="row mt-5"></div>
-            <div class="row w-75 mx-auto mt-5 text-center">
-                <div class="col d-flex justify-content-center">
-                    <p class="point-card border border-primary border-3 rounded p-3">1</p>
-                </div>
-                <div class="col d-flex justify-content-center">
-                    <p class="point-card border border-primary border-3 rounded p-3">2</p>
-                </div>
-                <div class="col d-flex justify-content-center">
-                    <p class="point-card border border-primary border-3 rounded p-3">3</p>
-                </div>
-                <div class="col d-flex justify-content-center">
-                    <p class="point-card border border-primary border-3 rounded p-3">5</p>
-                </div>
-                <div class="col d-flex justify-content-center">
-                    <p class="point-card border border-primary border-3 rounded p-3">8</p>
-                </div>
-                <div class="col d-flex justify-content-center">
-                    <p class="point-card border border-primary border-3 rounded p-3">?</p>
-                </div>
-                <div>
-                    Select Your Card!
-                </div>
-            </div>
-        </div>
-    </div>
-    <script type="module" src="/main.js"></script>
-</body>
+        <script type="module" src="/main.js"></script>
+    </body>
