--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             <!-- Landing Page -->
             <div id="landing-page">
                 <div class="d-flex justify-content-center mt-3">
-                    <!-- <h1>Points Picker</h1> -->
+                    <h1>Points Picker</h1>
                 </div>
                 <div class="d-grid gap-2 col-12 mx-auto constrain">
                     <label for="room-code" class="fw-bold mt-4">ROOM CODE</label>
