--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,10 @@
                         </button>
                     </div>
                     <div>
+                        <button class="btn btn-outline-light btn-sm">
+                            Timer
+                            <i class="fa-solid fa-clock"></i>
+                        </button>
                         <button id="copy-link" class="btn btn-outline-light btn-sm">
                         <span id="title"></span>
                             <i id="copy-icon" class="ms-1 fa-solid fa-copy"></i>
