--- a/public/index.html
+++ b/public/index.html
@@ -28,64 +28,67 @@
 
             <!-- Game Room -->
             <div id="game-room" class="d-none">
-
-
                 <!-- Header -->
                 <div class="d-flex justify-content-between mt-3">
                     <div>
-                        <button id="exit" class="btn btn-outline-danger btn-sm">
+                        <button id="exit" class="btn btn-outline-danger btn-sm" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Leave Room">
                             <i class="fa-solid fa-arrow-left"></i>
                             Exit
                         </button>
                     </div>
                     <div>
-                        <button class="btn btn-outline-light btn-sm">
-                            Timer
-                            <i class="fa-solid fa-clock"></i>
+                        <span data-bs-toggle="modal" data-bs-target="#timerModal">
+                            <button id="timer-btn" class="btn btn-outline-light btn-sm" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Start Timer">
+                                <span id="timer"></span>
+                                <i class="fa-solid fa-clock"></i>
+                            </button>
+                        </span>
+                        <button id="is-spectating" class="btn btn-outline-warning btn-sm" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Stop Spectating">
+                            <span class="me-1">Spectating</span>
+                            <i class="fa-solid fa-ghost"></i>
                         </button>
-                        <button id="copy-link" class="btn btn-outline-light btn-sm">
-                        <span id="title"></span>
-                            <i id="copy-icon" class="ms-1 fa-solid fa-copy"></i>
-                            <i id="copy-done-icon" class="d-none ms-1 fa-solid fa-check"></i>
+                        <button id="is-not-spectating" class="btn btn-outline-light btn-sm" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Start Spectating">
+                            <i class="fa-solid fa-ghost"></i>
+                        </button>
+                        <!-- <button class="btn btn-outline-light btn-sm"> -->
+                        <!--     <i class="fa-solid fa-gear"></i> -->
+                        <!-- </button> -->
+                        <button id="copy-link" class="btn btn-outline-light btn-sm"  data-bs-toggle="tooltip" data-bs-placement="bottom" title="Copy Link">
+                            <span id="title" class="me-1"></span>
+                            <i id="copy-icon" class="fa-solid fa-copy"></i>
+                            <i id="copy-done-icon" class="d-none fa-solid fa-check"></i>
                         </button>
                     </div>
                 </div>
 
-                <div class="d-grid gap-2 col-6 mx-auto constrain">
-                    <button id="reveal" class="btn btn-primary btn-lg my-4">Reveal</button>
-                    <button id="reset" class="d-none btn btn-primary btn-lg my-4">Reset</button>
+                <div class="d-grid gap-2 col-12 mx-auto constrain">
+                    <button id="reveal" class="btn btn-primary btn-lg my-4">Show Results</button>
+                    <button id="reset" class="d-none btn btn-primary btn-lg my-4">Next Round</button>
                 </div>
 
                 <!-- Stats -->
-                <div id="stats" class="">
-                    <h2 class="d-flex justify-content-center"> Results<h2>
+                <div id="stats">
+                    <div id="results-title" class="d-flex justify-content-center"> Results</div>
                     <div id="bar-chart" class="w-75 bar-chart mx-auto"></div>
                 </div>
 
                 <!-- Players -->
-                <div id="players" class="row mt-5 w-75 mx-auto"></div>
+                <div id="players" class="row mt-5 mx-auto"></div>
 
                 <!-- Cards -->
-                <div class="row w-50 mx-auto mt-5 text-center">
-                    <div class="col d-flex justify-content-center">
-                        <p class="point-card border border-primary border-3 rounded p-3">1</p>
+                <div id="cards">
+                    <div class="d-flex flex-wrap gap-3 justify-content-center mt-5 text-center">
+                        <p class="point-card border border-primary border-3 rounded p-3 user-select-none">1</p>
+                        <p class="point-card border border-primary border-3 rounded p-3 user-select-none">2</p>
+                        <p class="point-card border border-primary border-3 rounded p-3 user-select-none">3</p>
+                        <p class="point-card border border-primary border-3 rounded p-3 user-select-none">5</p>
+                        <p class="point-card border border-primary border-3 rounded p-3 user-select-none">8</p>
+                        <p class="point-card border border-primary border-3 rounded p-3 user-select-none">?</p>
+                        <div class="text-danger" data-bs-toggle="tooltip" data-bs-placement="top" title="Remove Your Card">
+                            <p id='clear-card' class="clear-card border border-danger border-3 rounded p-3">X</p>
+                        </div>
                     </div>
-                    <div class="col d-flex justify-content-center">
-                        <p class="point-card border border-primary border-3 rounded p-3">2</p>
-                    </div>
-                    <div class="col d-flex justify-content-center">
-                        <p class="point-card border border-primary border-3 rounded p-3">3</p>
-                    </div>
-                    <div class="col d-flex justify-content-center">
-                        <p class="point-card border border-primary border-3 rounded p-3">5</p>
-                    </div>
-                    <div class="col d-flex justify-content-center">
-                        <p class="point-card border border-primary border-3 rounded p-3">8</p>
-                    </div>
-                    <div class="col d-flex justify-content-center">
-                        <p class="point-card border border-primary border-3 rounded p-3">?</p>
-                    </div>
-                    <div>
+                    <div class="d-flex justify-content-center">
                         Select Your Card!
                     </div>
                 </div>
@@ -93,19 +96,60 @@
             </div>
 
             <!-- Change Name Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="nameModal" tabindex="-1" aria-labelledby="nameModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Change Name</h1>
+                            <h1 class="modal-title fs-5" id="nameModalLabel">Change Name</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             <input id="name-input" type="text" id="room-code" maxlength="16" class="form-control" placeholder="Name">
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                             <button id="change-name" type="button" class="btn btn-primary" data-bs-dismiss="modal">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+
+            <!-- Set Timer Modal -->
+            <div class="modal fade" id="timerModal" tabindex="-1" aria-labelledby="timerModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="timerModalLabel">Start Timer</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="d-flex align-items-center justify-content-center">
+                                <div class="btn-group-vertical">
+                                    <button id='minute-tens-up' class="btn btn-outline-primary"><i class="fa-solid fa-angle-up"></i></button>
+                                    <h1 id='minute-tens' class="m-auto p-2">1</h1>
+                                    <button id='minute-tens-down' class="btn btn-outline-primary"><i class="fa-solid fa-angle-down"></i></button>
+                                </div>
+                                <div class="btn-group-vertical">
+                                    <button id='minute-ones-up' class="btn btn-outline-primary"><i class="fa-solid fa-angle-up"></i></button>
+                                    <h1 id='minute-ones' class="m-auto p-2">0</h1>
+                                    <button id='minute-ones-down' class="btn btn-outline-primary"><i class="fa-solid fa-angle-down"></i></button>
+                                </div>
+                                <h1>:</h1>
+                                <div class="btn-group-vertical">
+                                    <button id='second-tens-up' class="btn btn-outline-primary"><i class="fa-solid fa-angle-up"></i></button>
+                                    <h1 id='second-tens' class="m-auto p-2">0</h1>
+                                    <button id='second-tens-down' class="btn btn-outline-primary"><i class="fa-solid fa-angle-down"></i></button>
+                                </div>
+                                <div class="btn-group-vertical">
+                                    <button id='second-ones-up' class="btn btn-outline-primary"><i class="fa-solid fa-angle-up"></i></button>
+                                    <h1 id='second-ones' class="m-auto p-2">0</h1>
+                                    <button id='second-ones-down' class="btn btn-outline-primary"><i class="fa-solid fa-angle-down"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button id="start-timer" type="button" class="btn btn-primary" data-bs-dismiss="modal">Start</button>
                         </div>
                     </div>
                 </div>
